# template-test

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml
docker-compose/: Dockerfile.base  docker-compose.dev.yml  up-dev.sh
prompts/: main.md  tests.md
scripts/: check.sh  start.sh
src/: module.py
tests/: test_check.py  test_module.py
