[tool.poetry]
name = "py-project-template"
version = "0.0.0"
description = "py-project-template"
authors = ["Some Author <example@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12,<4.0"
isort = "^8.0"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.3"
pytest-cov = "^7.1"
flake8 = "^7.3"
flake8-broken-line = "^1.0"
flake8-return = "^1.2"
flake8-isort = "^7.0"
flake8-quotes = "^3.4"
flake8-bugbear = "^25.11"
flake8-pyproject = "^1.2"
pep8-naming = "^0.4"
mypy = "^1.20"
ruff = "^0.15"
radon = "^6.0"
types-setuptools = "^82.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.blue]
line-length = 88
preview = true


[tool.isort]
profile = "black"


[tool.flake8]
max-line-length = 88
max-complexity = 10


[tool.ruff]
line-length = 88


[tool.ruff.format]
quote-style = "single"


[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
mypy_path = ["src", "tests"]


[tool.pytest.ini_options]
pythonpath = "src"
python_files = "test_*.py"
testpaths = "tests"
norecursedirs = ["venv*", ".venv"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
addopts = "-v -x -s -p no:warnings"
asyncio_mode = "auto"
